[gd_scene load_steps=8 format=3 uid="uid://ckvye2jilofkn"]

[ext_resource type="Script" path="res://scrips/bulleto_prime.gd" id="1_mkjnn"]

[sub_resource type="SphereMesh" id="SphereMesh_f20pv"]

[sub_resource type="CircleShape2D" id="CircleShape2D_qs4aw"]
radius = 60.9262

[sub_resource type="BoxMesh" id="BoxMesh_4yje3"]

[sub_resource type="Animation" id="Animation_kwvrk"]
length = 0.001
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath(".:rotation")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 0,
"values": [0.0]
}

[sub_resource type="Animation" id="Animation_2niuk"]
resource_name = "new_animation"
length = 3.0
loop_mode = 1
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath(".:rotation")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0, 3),
"transitions": PackedFloat32Array(1, 1),
"update": 0,
"values": [0.0, 6.28319]
}

[sub_resource type="AnimationLibrary" id="AnimationLibrary_u3kvk"]
_data = {
"RESET": SubResource("Animation_kwvrk"),
"new_animation": SubResource("Animation_2niuk")
}

[node name="bulleto" type="Node2D" groups=["bala_enemy", "enemy"]]
modulate = Color(1, 0, 1, 1)
z_index = -1
script = ExtResource("1_mkjnn")
bullet_spe = 1500.0
roti = 0.05
sepy = 0.0

[node name="MeshInstance2D" type="MeshInstance2D" parent="."]
scale = Vector2(128.145, 128)
mesh = SubResource("SphereMesh_f20pv")

[node name="Timer" type="Timer" parent="."]
wait_time = 0.1
autostart = true

[node name="VisibleOnScreenNotifier2D" type="VisibleOnScreenNotifier2D" parent="."]
position = Vector2(1.14441e-05, 5.72205e-06)
scale = Vector2(19.2, 19.2)

[node name="Area2D" type="Area2D" parent="." groups=["enemyb"]]

[node name="CollisionShape2D" type="CollisionShape2D" parent="Area2D"]
shape = SubResource("CircleShape2D_qs4aw")

[node name="lado" type="Node2D" parent="."]

[node name="MeshInstance2D2" type="MeshInstance2D" parent="lado"]
position = Vector2(48, 1.38283e-05)
scale = Vector2(104.5, 32)
mesh = SubResource("BoxMesh_4yje3")

[node name="lado2" type="Node2D" parent="."]
rotation = 1.5708

[node name="MeshInstance2D2" type="MeshInstance2D" parent="lado2"]
position = Vector2(48, 1.12373)
scale = Vector2(104.5, 30.2255)
mesh = SubResource("BoxMesh_4yje3")

[node name="lado3" type="Node2D" parent="."]
rotation = 3.14159

[node name="MeshInstance2D2" type="MeshInstance2D" parent="lado3"]
position = Vector2(48, 0.374516)
scale = Vector2(104.5, 33.2221)
mesh = SubResource("BoxMesh_4yje3")

[node name="lado4" type="Node2D" parent="."]
rotation = -1.5708

[node name="MeshInstance2D2" type="MeshInstance2D" parent="lado4"]
position = Vector2(48, -0.561846)
scale = Vector2(104.5, 33.5966)
mesh = SubResource("BoxMesh_4yje3")

[node name="Timer2" type="Timer" parent="."]
wait_time = 3.0
one_shot = true
autostart = true

[node name="AnimationPlayer" type="AnimationPlayer" parent="."]
libraries = {
"": SubResource("AnimationLibrary_u3kvk")
}
autoplay = "new_animation"

[connection signal="timeout" from="Timer" to="." method="_on_timer_timeout"]
[connection signal="screen_entered" from="VisibleOnScreenNotifier2D" to="." method="_on_visible_on_screen_notifier_2d_screen_entered"]
[connection signal="screen_exited" from="VisibleOnScreenNotifier2D" to="." method="_on_visible_on_screen_notifier_2d_screen_exited"]
[connection signal="area_entered" from="Area2D" to="." method="_on_area_2d_area_entered"]
[connection signal="timeout" from="Timer2" to="." method="_on_timer_2_timeout"]
